--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,7 @@ html{
     text-decoration: none;
     margin-top: 15px;
     border: none;
+    appearance: none;  /*???*/
 }
 
 .btn:hover{
@@ -210,7 +211,7 @@ html{
     margin-top: 46px;
     padding-top: 50%;
     position: relative;
-    background: url('/assets/img/slider/slider1.jpg') top center/cover no-repeat;
+    background: url('../img/slider/slider1.jpg') top center/cover no-repeat;
 }
 
 #slider .text-content{
@@ -226,11 +227,12 @@ html{
 #slider .text-heading{
     font-weight: 500;
     font-size: 24px;
-    margin-bottom: 25px;
 }
 
-#slider .text-desscription{
+#slider .text-description{
     font-size: 15px;
+    margin-top: 25px;
+    text-shadow: 0 0 10px #000;
 }
 
 /* #content{
